[package]
name = "Rust-ethereum"
version = "0.1.0"
edition = "2021"
author = "Muktar Sadiq"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master", default-features = false, features = [
    "legacy",
] }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", branch = "master", features = [
    "full",
] }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs", branch = "master", features = [
    "ws",
] }

svm-rs = "0.5.7"
eyre = "*"
hex = "*"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[[bin]]
name = "transact"
path = "src/Simple_transactions.rs"


[[bin]]
name = "deploy"
path = "src/Contract_deploy.rs"
